{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 25,
  "lineage": "67d6fb82-fe93-d720-1110-250c8ab9e9a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08139d92af30d44b1",
            "arn": "arn:aws:ec2:sa-east-1:831926612093:elastic-ip/eipalloc-08139d92af30d44b1",
            "association_id": "eipassoc-0f2804dc72b4705d5",
            "domain": "vpc",
            "id": "eipalloc-08139d92af30d44b1",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0b7f5f36d44d81275",
            "private_dns": "ip-10-0-1-106.sa-east-1.compute.internal",
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-56-125-197-253.sa-east-1.compute.amazonaws.com",
            "public_ip": "56.125.197.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bsbeauty-eip"
            },
            "tags_all": {
              "Name": "bsbeauty-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0662ca6894abc2d3b",
            "arn": "arn:aws:ec2:sa-east-1:831926612093:instance/i-0a5cba19415de00d7",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5cba19415de00d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bsbeauty-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-060c25f8626c52a1d",
            "private_dns": "ip-10-0-2-7.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0416ade5498c15105",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1d65b069e0a7d70",
            "tags": {
              "Name": "bsbeauty-private-ec2"
            },
            "tags_all": {
              "Name": "bsbeauty-private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0912e2224d2f80de4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.private",
            "aws_security_group.public",
            "aws_subnet.private",
            "aws_vpc.bsbeauty_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0662ca6894abc2d3b",
            "arn": "arn:aws:ec2:sa-east-1:831926612093:instance/i-0450e85b229850591",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0450e85b229850591",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bsbeauty-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a997998b6e66614",
            "private_dns": "ip-10-0-1-173.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.173",
            "public_ip": "18.230.108.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ba907b8dada0059",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c63d418f71118bc",
            "tags": {
              "Name": "bsbeauty-public-ec2"
            },
            "tags_all": {
              "Name": "bsbeauty-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0647307c6adbed42b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.bsbeauty_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:831926612093:internet-gateway/igw-0609484338994f538",
            "id": "igw-0609484338994f538",
            "owner_id": "831926612093",
            "tags": {
              "Name": "bsbeauty-igw"
            },
            "tags_all": {
              "Name": "bsbeauty-igw"
            },
            "vpc_id": "vpc-06eb9da74903396fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08139d92af30d44b1",
            "association_id": "eipassoc-0f2804dc72b4705d5",
            "connectivity_type": "public",
            "id": "nat-0bc26f6e2258ac558",
            "network_interface_id": "eni-0b7f5f36d44d81275",
            "private_ip": "10.0.1.106",
            "public_ip": "56.125.197.253",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07c63d418f71118bc",
            "tags": {
              "Name": "bsbeauty-nat"
            },
            "tags_all": {
              "Name": "bsbeauty-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:831926612093:route-table/rtb-07a9d6a21842c7125",
            "id": "rtb-07a9d6a21842c7125",
            "owner_id": "831926612093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc26f6e2258ac558",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bsbeauty-public-rt"
            },
            "tags_all": {
              "Name": "bsbeauty-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb9da74903396fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:831926612093:route-table/rtb-06b98b207303be191",
            "id": "rtb-06b98b207303be191",
            "owner_id": "831926612093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0609484338994f538",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bsbeauty-public-rt"
            },
            "tags_all": {
              "Name": "bsbeauty-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb9da74903396fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017a825a9469bdb22",
            "route_table_id": "rtb-07a9d6a21842c7125",
            "subnet_id": "subnet-0d1d65b069e0a7d70"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d183b49e001ab33",
            "route_table_id": "rtb-06b98b207303be191",
            "subnet_id": "subnet-07c63d418f71118bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:831926612093:security-group/sg-0912e2224d2f80de4",
            "description": "Permite acesso apenas da instancia publica",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0912e2224d2f80de4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0647307c6adbed42b"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0647307c6adbed42b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bsbeauty-private-sg",
            "name_prefix": "",
            "owner_id": "831926612093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bsbeauty-private-sg"
            },
            "tags_all": {
              "Name": "bsbeauty-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb9da74903396fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:831926612093:security-group/sg-0647307c6adbed42b",
            "description": "Permite SSH HTTP HTTPS publicos",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0647307c6adbed42b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bsbeauty-public-sg",
            "name_prefix": "",
            "owner_id": "831926612093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bsbeauty-public-sg"
            },
            "tags_all": {
              "Name": "bsbeauty-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb9da74903396fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:831926612093:subnet/subnet-0d1d65b069e0a7d70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1d65b069e0a7d70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831926612093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06eb9da74903396fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:831926612093:subnet/subnet-07c63d418f71118bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c63d418f71118bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831926612093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06eb9da74903396fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bsbeauty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bsbeauty_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:831926612093:vpc/vpc-06eb9da74903396fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbf1701dd79ae9bd",
            "default_route_table_id": "rtb-065da2ed404b991e5",
            "default_security_group_id": "sg-0a5ef2cee12053ae3",
            "dhcp_options_id": "dopt-04cb2c0507b1ac5a3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06eb9da74903396fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065da2ed404b991e5",
            "owner_id": "831926612093",
            "tags": {
              "Name": "bsbeauty-vpc"
            },
            "tags_all": {
              "Name": "bsbeauty-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}